# DynamicMCPProxy

./: .gitignore  AGENTS.md  CODE_REVIEW.md  CONTEXT.md  FEATURE-UPDATE-PLAN.md  HERMES.md  README.md  ai_bookmarks_master_june_template.xlsx - Master Bookmarks.csv  catalogue.json  inspect_fastmcp.py  inspect_results.txt  install.sh  proxy_config.json.example  pyproject.toml  run_inspect.py  run_tests.py  test_results.txt  verify_integrations.py
configs/: slack.json
docs/adr/: README.md
docs/memories/: patterns_and_lessons.md
docs/memories/architectural_decisions/: stdio_transport.md  user_catalogue_and_env.md
docs/memories/codebase_insights/: catalogue_and_config.md  matcher.md  proxy_server.md
plugins/: rep-security-scan.sh  repo-audit-scan.sh
research/: LINKS.md  README.md
research/github-projects/: anthropics-claude-code-7336.md  beever-atlas.md  lap-lean-api.md  memtrace-code-kg.md
research/notes/: 9router-tool-compression.md  agent-sandbox-isolation.md  agentic-design-patterns.md  fastmcp-dynamic-proxy.md  mcp-gateway-comparison.md  simplemem-memory-compression.md
research/templates/: project-note.md
scratch/: fix_tests.py  test_neo4j_semantic.py
scripts/: sync_catalogue.py
src/: api.py  auth.py  config.py  guardrails.py  matcher.py  plugin_scanner.py  proxy_server.py
src/loaders/: rest.py
tests/: mock_mcp_server.py  mock_rest_config.json  test_capabilities.py  test_config.py  test_guardrails.py  test_integration.py  test_matcher.py  test_matcher_internal.py  test_rest_loader.py  test_steering_rest.py
