[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dynamic-mcp-proxy"
version = "0.1.0"
description = "A smart MCP proxy that lazily loads relevant tool servers based on project context"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastmcp>=2.14.5",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "watchdog>=4.0.0",
    "PyJWT>=2.8.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[project.scripts]
dynamic-mcp-proxy = "src.proxy_server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]


[tool.hatch.build.targets.wheel]
packages = ["src"]
